Fix #43 improve spacing on course category page

--- a/less/category.less
+++ b/less/category.less
@@ -1,4 +1,5 @@
 .course_category_tree {
+    margin-top: 5px;
     .category {
         >.info {
             background-color: inherit;
